Added function and update tests
